# rusty-amp

./: .eleventy.js  .gitignore  Agents.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  package.json
.claude/skills/add-amp-model/: SKILL.md
.claude/skills/add-bundled-preset/: SKILL.md
.claude/skills/add-pedal/: SKILL.md
.config/: nextest.toml
.github/workflows/: pages.yml  release.yml  test.yml
examples/: amp_analysis.rs  au_cab_extract.rs  au_params.rs  cab_analysis.rs  cab_spectrum.rs  di_compare.rs  knob_match.rs  rig_loudness.rs
presets/: clean_melodic.toml  death.toml  deftones.toml  disturbed.toml  metalcore_shred.toml  metallica.toml  pantera.toml  pantera_floods.toml  slayer.toml  slipknot.toml  solo_seeker.toml
site/: README.md  amps-cabs.html  amps-cabs.md  getting-started.html  getting-started.md  how-it-works.html  how-it-works.md  index.html  index.md  pedals.html  pedals.md  plugins.html  plugins.md  presets.html  presets.md  tools.md
site/_includes/: base.njk  page.njk
site/assets/: site.css  site.js
site/assets/audio/: README.md
src/: lib.rs  main.rs  preset.rs  recording.rs  ui.rs
src/audio/: mod.rs
src/dsp/: biquad.rs  compressor.rs  conv.rs  delay.rs  distortion.rs  fuzz.rs  mod.rs  noise_gate.rs  oversample.rs  parametric_eq.rs  preamp_eq.rs  reverb.rs  tone_probe.rs  tonestack.rs  tube_screamer.rs  tuner.rs
src/dsp/amp/: marshall.rs  mesa.rs  mod.rs  randall.rs  vox.rs
src/dsp/cab/: external.rs  ir.rs  marshall.rs  mesa.rs  mod.rs  orange.rs
src/dsp/effects/: chorus.rs  compressor.rs  delay.rs  distortion.rs  flanger.rs  fuzz.rs  fuzzboy.rs  mod.rs  noise_gate.rs  parametric_eq.rs  preamp_eq.rs  reverb.rs  tube_screamer.rs
src/host/: au.rs  clap_host.rs  mod.rs
src/ui/: amp_plugins.rs  config.rs  draw.rs  input.rs  ir_browser.rs  mod.rs  plugins.rs  presets.rs  setup.rs  styles.rs  tuner.rs
src/ui/snapshots/: rusty_amp__ui__draw__tests__add_pedal_modal.snap  rusty_amp__ui__draw__tests__default_screen.snap  rusty_amp__ui__draw__tests__ir_browser_modal.snap  rusty_amp__ui__draw__tests__plugin_browser_modal.snap  rusty_amp__ui__draw__tests__preset_modal.snap  rusty_amp__ui__draw__tests__save_preset_dialog.snap
